WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296454
[Liquid Glass] wsj.com: top fixed element color extension disappears after scrolling back down
https://bugs.webkit.org/show_bug.cgi?id=296454
Summary
[Liquid Glass] wsj.com: top fixed element color extension disappears after sc...
Wenson Hsieh
Reported
2025-07-24 15:34:27 PDT
rdar://156610120
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-07-24 16:37:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48503
EWS
Comment 2
2025-07-24 20:03:39 PDT
Committed
297849@main
(fc8c073ca965): <
https://commits.webkit.org/297849@main
> Reviewed commits have been landed. Closing PR #48503 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug